--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
+    "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.10.3",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
