--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.13",
     "astro": "^4.10.3",
+    "astro-heroicons": "^2.1.1",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7"
   }
