--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "astro-heroicons": "^2.1.1",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.5"
   }
 }
