--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: site-dist
+          name: github-page
           path: ./dist
       - name: Deploy to GitHub Pages
         id: deployment
