--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -40,6 +40,7 @@ jobs:
     permissions:
       contents: read
       deployments: write
+      id-token: write
     steps:
       - uses: actions/download-artifact@v4
         with:
