--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v4.3.3
         with:
           # Artifact name
-          name: github-page
+          name: github-pages
           # A file, directory or wildcard pattern that describes what to upload
           path: ./dist
 
@@ -44,7 +44,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: github-page
+          name: github-pages
           path: ./dist
       - name: Deploy to GitHub Pages
         id: deployment
