fix: so many perms so little time

--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -41,6 +41,7 @@ jobs:
       contents: read
       deployments: write
       id-token: write
+      pages: write
     steps:
       - uses: actions/download-artifact@v4
         with:
