--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -22,31 +22,24 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - name: Build website
         run: nix develop .# && npm install && npm run build
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v4.3.3
+      - name: Create documentation artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          # Artifact name
           name: github-pages
-          # A file, directory or wildcard pattern that describes what to upload
-          path: ./dist
-
+          path: result
+          
   publish:
     name: Publish to Cloudflare Pages
     runs-on: ubuntu-latest
-    needs:
-      - build
-      # TODO: fix all current build errors
-      # - lighthouse-local
     permissions:
-      contents: read
-      deployments: write
+      contents: write
       id-token: write
       pages: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
     steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: github-pages
-          path: ./dist
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
